[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/graphics/sprites.png" type="Texture" id=1]
[ext_resource path="res://src/sprites/BrokenBrick.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -2.66667, 0, 0, 0, 0, 12.6694, -22.3673, 0, 0, 0, 0, 25.7655, -2.78931 )
}

[node name="BrokenBrick" type="Node2D"]
z_index = -1
script = ExtResource( 2 )

[node name="SpriteTopRight" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 4, -4 )
region_enabled = true
region_rect = Rect2( 96, 200, 8, 8 )

[node name="SpriteBottomRight" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 4, 4 )
region_enabled = true
region_rect = Rect2( 96, 200, 8, 8 )

[node name="SpriteTopLeft" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -4, -4 )
region_enabled = true
region_rect = Rect2( 96, 200, 8, 8 )

[node name="SpriteBottomLeft" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( -4, 4 )
region_enabled = true
region_rect = Rect2( 96, 200, 8, 8 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 0, 2 )
scale = Vector2( 0.5, 0.75 )
curve = SubResource( 1 )
